@@ -69,7 +69,12 @@ db_open(const char * dbfn, DB_ENV * dbenv, DB ** dbp)
 	goto err;
     }
 
-    if ((ret = db->open(db, dbfn, NULL, DB_BTREE, DB_CREATE, 0664)) != 0) {
+#if (DB_VERSION_MAJOR == 4 && DB_VERSION_MINOR == 1)
+    ret = db->open(db, NULL, dbfn, NULL, DB_BTREE, DB_CREATE, 0664);
+#else
+    ret = db->open(db, dbfn, NULL, DB_BTREE, DB_CREATE, 0664);
+#endif
+    if (ret != 0) {
 	db->err(db, ret, "db->open(%s)", dbfn);
 	goto err;
     }
