@@ -38,6 +38,7 @@
 	- move libfmagic to librpmio.
 	- use libtool-1.4.3, autoconf-2.56.
 	- add explicit -L/lib64 -L/usr/lib64 for libtool mode=relink on x86_64.
+	- use usrlib_LTLIBRARIES to install directly in /usr/lib64 instead.
 
 4.0.4 -> 4.1:
 	- loosely wire beecrypt library into rpm.
